--- a/Ejemplo3.html
+++ b/Ejemplo3.html
@@ -2,7 +2,8 @@
     <head>
     </head>
     <body>
-        <p>Esta es la primera version del Ejemplo3.html, solo es una prueba
+        <p>Esta es la primera version del Ejemplo3.html, solo es una prueba.
+            Este es otro parrafo de este trabajo
         </p>  
     </body>
 </html>
