--- a/Ejemplo3.html
+++ b/Ejemplo3.html
@@ -3,7 +3,8 @@
     </head>
     <body>
         <p>Esta es la primera version del Ejemplo3.html, solo es una prueba.
-            Este es otro parrafo de este trabajo
+            Este es otro parrafo de este trabajo.
+            
         </p>  
     </body>
 </html>
