--- a/Ejemplo3.html
+++ b/Ejemplo3.html
@@ -2,9 +2,6 @@
     <head>
     </head>
     <body>
-        <p>Esta es la primera version del Ejemplo3.html, solo es una prueba.
-            Este es otro parrafo de este trabajo.
-            
-        </p>  
+        <p>Esta es la primera version del Ejemplo3.html, solo es una prueba.</p>  
     </body>
 </html>
